--- a/index.html
+++ b/index.html
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<title>Document</title>
-</head>
-<body>
-	<div id="app"></div>
-
-	<script src="./bundle.js"></script>
-</body>
+<html>
+  <head>
+    <meta charset="UTF-8">
+    <title>北京欢迎你</title>
+  </head>
+  <body>
+  <div id="app"></div>
+  <script type="text/javascript" src="./bundle.js"></script></body>
 </html>
